--- a/templates/show_all.html
+++ b/templates/show_all.html
@@ -4,7 +4,8 @@
    <body>
       
       <h3>
-         <a href = "{{ url_for('show_all') }}">CS480-A4, Calvin Teng</a>
+         <a href = "{{ url_for('show_all') }}">CS480-A4, Calvin Teng</a></br>
+         <a href = "{{ url_for('aaron_soup') }}">CS480-A4, Aaron Reyes</a>
       </h3>
       
       <hr/>
