added bootstrap example to app.py

--- a/templates/aaron_soup.html
+++ b/templates/aaron_soup.html
@@ -2,7 +2,8 @@
 <html lang = "en">
       <h3>
          <a href = "{{ url_for('show_all') }}">CS480-A4, Calvin Teng</a></br>
-         <a href = "{{ url_for('aaron_soup') }}">CS480-A4, Aaron Reyes</a>
+         <a href = "{{ url_for('aaron_soup') }}">CS480-A4, Aaron Reyes</a></br>
+         <a href = "{{ url_for('bootstrap_example') }}">CS480-A4, Oscar Alcaraz</a>
       </h3>
 <body>
 	{% if name %}
