--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -10,11 +10,18 @@
 </head>
 
 <body>
+    <div id="headerBar">
+        /* PlaceHolder for anything we want at the top*/
+    </div>
+    <header id="header">
+        <h1 class="logo">
+            <a href="margatsni.xyz">Margatsni</a>
+        </h1>
+    </header>
     <!-- Large button group -->
     <div class="login-menu">
         <a class="button" href="{{url_for('connect')}}">Login</a>
     </div>
-    <h1> Margatsni </h1>
 </body>
 
 </html>
