--- a/Margatsni/static/style.css
+++ b/Margatsni/static/style.css
@@ -39,3 +39,16 @@ h1 {
 }
 
 /* CSS for divs */
+
+#header {
+    display: block;
+    font-size: 2em;
+    font-weight: bold;
+    left: 0;
+    line-height: 200px;
+    margin: auto;
+    margin-top: -100px;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+}
