Attempt to center things #4

--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -13,11 +13,9 @@
     <div id="headerBar">
         /* PlaceHolder for anything we want at the top*/
     </div>
-    <header id="header">
-        <h1 class="logo">
-            <a href="margatsni.xyz">Margatsni</a>
-        </h1>
-    </header>
+    <div id="header">
+        <a href="margatsni.xyz">Margatsni</a>
+    </div>
     <!-- Large button group -->
     <div class="login-menu">
         <a class="button" href="{{url_for('connect')}}">Login</a>
