--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -20,6 +20,9 @@
     <div class="login-menu">
         <a class="button" href="{{url_for('connect')}}">Login</a>
     </div>
+    <form class="container" action="/get-user-media" method="post">
+        <button class="button">Get Your Photos</button>
+    </form>
 </body>
 
 </html>
