testing my index

--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -10,19 +10,17 @@
 </head>
 
 <body>
-    <div id="headerBar">
-        /* PlaceHolder for anything we want at the top*/
-    </div>
-    <div id="header">
-        <a href="margatsni.xyz">Margatsni</a>
-    </div>
     <!-- Large button group -->
     <div class="login-menu">
         <a class="button" href="{{url_for('connect')}}">Login</a>
     </div>
+    
+    <h1> Margatsni </h1>
+    
     <form class="container" action="/get-user-media" method="post">
-        <button class="button">Get Your Photos</button>
+            <button class="button">Get Your Photos</button>
     </form>
+    
 </body>
 
 </html>
