--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -15,7 +15,7 @@
         <a class="button" href="{{url_for('connect')}}">Login</a>
     </div>
     
-    <h1> Margatsni </h1>
+    <h1> asdf Margatsni </h1>
     
     <form class="container" action="/get-user-media" method="post">
             <button class="button">Get Your Photos</button>
