--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -6,7 +6,7 @@
     <title>Margatsni - Instagram Photo Downloader</title>
     <meta name="description" content="Margatsni - Instagram Photo Downloader">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ url_for('static', filename='../css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename=./style.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Kranky|Sofia" rel="stylesheet">
 
 </head>
