--- a/Margatsni/static/style.css
+++ b/Margatsni/static/style.css
@@ -1,3 +1,8 @@
+@media screen and (min-width:10px) and (max-width:640px) {
+.leftSideBar{display:block;}
+.rightSideBar{display:block;}
+}
+
 a {
     color: inherit;
     text-decoration: none;
