--- a/Margatsni/static/style.css
+++ b/Margatsni/static/style.css
@@ -1,24 +1,25 @@
 @media screen and (min-width:10px) and (max-width:640px) {
-.leftSideBar{display:block;}
-.rightSideBar{display:block;}
+    .leftSideBar {
+        display: block;
+    }
+    .rightSideBar {
+        display: block;
+    }
 }
-
 a {
     color: inherit;
     text-decoration: none;
 }
-
 body {
     width: 100wh;
     height: 90vh;
     color: #fff;
     background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
     background-size: 400% 400%;
-    -webkit-animation: Gradient 15s ease infinite;
-    -moz-animation: Gradient 15s ease infinite;
-    animation: Gradient 15s ease infinite;
+    -webkit-animation: Gradient 20s ease infinite;
+    -moz-animation: Gradient 20s ease infinite;
+    animation: Gradient 20s ease infinite;
 }
-
 @-webkit-keyframes Gradient {
     0% {
         background-position: 0% 50%
@@ -30,7 +31,6 @@ body {
         background-position: 0% 50%
     }
 }
-
 @-moz-keyframes Gradient {
     0% {
         background-position: 0% 50%
@@ -42,7 +42,6 @@ body {
         background-position: 0% 50%
     }
 }
-
 @keyframes Gradient {
     0% {
         background-position: 0% 50%
@@ -55,7 +54,6 @@ body {
     }
 }
 
-
 /* CSS for classes */
 
 .title {
@@ -67,19 +65,18 @@ body {
     padding-top: 50px;
     padding-bottom: 50px;
 }
-
 .button {
-    display:block;
-    width:300px; 
+    display: block;
+    width: 300px;
     margin: 10px auto;
-    font-family:"Sofia", cursive;
-    font-size:30px;
-    outline:none;
+    font-family: "Sofia", cursive;
+    font-size: 30px;
+    outline: none;
     color: white;
-    border:none;
-    text-align:center;
-    cursor:pointer;
-    background-color:black;
+    border: none;
+    text-align: center;
+    cursor: pointer;
+    background-color: black;
     border-radius: 30px;
 }
 
