--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for('static', filename='./style.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Kranky|Sofia" rel="stylesheet">
-
+    <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
