--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1 class="title"><a href="{{url_for('index')}}"> Margatsni </a></h1>
-    <a class="button" href="{{url_for('connect')}}">Login</a>
+    <a class="button" href="{{url_for('login')}}">Login</a>
     <form class="container" action="/get-user-media" method="post">
         <button class="button">Get Your Photos</button>
     </form>
