changed up index.html, no need for index2.html, downloads work so far, but zipping files does not work at least on my machine. done for today

--- a/Margatsni/templates/login.html
+++ b/Margatsni/templates/login.html
@@ -1,5 +1,6 @@
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Margatsni - Instagram Photo Downloader</title>
     <meta name="description" content="Margatsni - Instagram Photo Downloader">
@@ -7,19 +8,26 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='./style.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Kranky|Sofia" rel="stylesheet">
     <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
-      <h1 class="title"> Enter Username and Password </h1>
-      <br>
-      <form action="" method="post">
-        <input class="button" type="text" placeholder="Username" name="username" value="">
-         <input class="button" type="password" placeholder="Password" name="password" value="">
-        <input class="button" type="submit" value="Login">
-      </form>
-      {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
-      {% endif %}
+        <br>
+        <form action="" method="post">
+            <input class="button" type="text" placeholder="Username" name="username" value="">
+            <input class="button" type="password" placeholder="Password" name="password" value="">
+            <input class="button" type="submit" value="Login">
+        </form>
+        
+        <!--- Prints error message to screen when login is unsuccessful -->
+        {% with messages = get_flashed_messages() %} {% if messages %}
+        <ul class=flashes>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %} {% endwith %} {% block body %}{% endblock %}
     </div>
-  </body>
+</body>
+
 </html>
