--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -13,8 +13,12 @@
 
 <body>
     <h1 class="title"><a href="{{url_for('index')}}"> Margatsni </a></h1>
-    <a class="button" href="{{url_for('login')}}">Login</a>
-    <form class="container" action="/get-user-media" method="post">
+    {% if not session['logged_in'] %}
+        <a class="button" href="{{url_for('login')}}">Login</a>
+    {% else %}
+        <p> Hello {{session['login_user']}}!</p>
+    {% endif %}
+    <form class="container" action="/get-target-media" method="post">
         <button class="button">Get Your Photos</button>
     </form>
 </body>
