little more testing

--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -19,6 +19,7 @@
         <p> Hello {{session['login_user']}}!</p>
     {% endif %}
     <form class="container" action="/get-target-media" method="post">
+        <input type="text" placeholder="Instagram Profile" name="target">
         <button class="button">Get Your Photos</button>
     </form>
 </body>
