--- a/Margatsni/templates/login.html
+++ b/Margatsni/templates/login.html
@@ -13,9 +13,9 @@
 <body>
     <div class="container">
         <br>
-        <form action="" method="post">
-            <input class="button" type="text" placeholder="Username" name="username" value="">
-            <input class="button" type="password" placeholder="Password" name="password" value="">
+        <form method="post">
+            <input type="text" placeholder="Username" name="username" value="">
+            <input type="password" placeholder="Password" name="password" value="">
             <input class="button" type="submit" value="Login">
         </form>
         
