--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Margatsni - Instagram Photo Downloader">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for('static', filename='./style.css') }}">
-    <link href="https://fonts.googleapis.com/css?family=Kranky|Sofia" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Domine|Sofia" rel="stylesheet">
     <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
 </head>
 
