--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -20,10 +20,9 @@
     </ul>
     {% endif %} {% endwith %} {% block body %}{% endblock %}
     <form class="container" action="/get-media" method="post">
-        <div id='focusOnEnter'>
-            <input type="text" placeholder="'user', 'https://www.instagram.com/instagram/', or 'https://www.instagram.com/p/BbVLoAeBUo-/?taken-by=instagram' " name="target">
-            <button class="button">Get Photos</button>
-        </div>
+        <input type="text" placeholder="'user', 'https://www.instagram.com/instagram/', or 'https://www.instagram.com/p/BbVLoAeBUo-/?taken-by=instagram' " name="target" autofocus>
+        <button class="button">Get Photos</button>
+
     </form>
     {% if not session['logged_in'] %}
     <a class="button" href="{{url_for('login')}}">Login</a> {% else %}
@@ -34,12 +33,6 @@
     </div>
     {% endif %}
 
-    <script>
-        window.onload = function({
-            document.getElementById('focusOnEnter').focus();
-        })
-
-    </script>
 </body>
 
 </html>
