adding autofocus to login

--- a/Margatsni/templates/login.html
+++ b/Margatsni/templates/login.html
@@ -22,7 +22,7 @@
     {% endif %} {% endwith %} {% block body %}{% endblock %}
     <div class="container">
         <form class="login" method="post">
-            <input type="username" placeholder="Instagram Username" name="username" value="">
+            <input type="username" placeholder="Instagram Username" name="username" value="" autofocus>
             <input type="password" placeholder="Instagram Password" name="password" value="">
             <input class="button" type="submit" value="Login">
         </form>
