fix wonky login proportions on mobile

--- a/Margatsni/templates/login.html
+++ b/Margatsni/templates/login.html
@@ -21,13 +21,11 @@
         {% endfor %}
     </ul>
     {% endif %} {% endwith %} {% block body %}{% endblock %}
-    <div class="container">
-        <form class="login" method="POST">
+        <form class="container" method="POST">
             <input type="username" placeholder="Instagram Username" name="username" value="" autofocus>
             <input type="password" placeholder="Instagram Password" name="password" value="">
             <input class="button" type="submit" value="Login">
         </form>
-    </div>
     <footer class="footer-distributed">
         <div class="footer-left">
             <p class="footer-links">
