--- a/Margatsni/templates/login.html
+++ b/Margatsni/templates/login.html
@@ -22,7 +22,7 @@
     </ul>
     {% endif %} {% endwith %} {% block body %}{% endblock %}
         <form class="container" method="POST">
-            <input type="username" placeholder="Instagram Username" name="username" value="" autofocus>
+            <input type="username" placeholder="Instagram Username" name="username" value="" autofocus><br>
             <input type="password" placeholder="Instagram Password" name="password" value="">
             <input class="button" type="submit" value="Login">
         </form>
