--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -24,7 +24,7 @@
     
     <form class="container" name="user-link" action="/get-media" method="post">
         <input type="text" placeholder="'user', 'https://www.instagram.com/instagram/', or 'https://www.instagram.com/p/BbVLoAeBUo-/?taken-by=instagram' " name="target" autofocus>
-        <button type="submit" class="button">Get Photos</button>
+        <button type="submit" class="button">Get Media</button>
     </form>
     
     {% if not session['logged_in'] %}
