minor word change

--- a/Margatsni/templates/help.html
+++ b/Margatsni/templates/help.html
@@ -39,7 +39,7 @@
         <img class="help-photos" src="../static/img/login_help.png">
         <br>
         <p>If this is the first time using our site, you may need to log in separately through Instagram to verify access for our server to access your account.</p>
-        <p style="font-size: 13px">**Note: We do not store any credentials entered**</p>
+        <p style="font-size: 13px">**Note: We do not store any information entered**</p>
     </div>
     <footer class="footer-distributed">
         <div class="footer-left">
