--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -13,20 +13,27 @@
 </head>
 
 <body>
-    <h1 class="title"><a href="{{url_for('index')}}"> Margatsni </a></h1> 
-    {% with messages = get_flashed_messages() %} {% if messages %}
+    <h1 class="title"><a href="{{url_for('index')}}"> Margatsni </a></h1> {% with messages = get_flashed_messages() %} {% if messages %}
     <ul class=flashes>
         {% for message in messages %}
         <p>{{ message }}</p>
         {% endfor %}
     </ul>
     {% endif %} {% endwith %} {% block body %}{% endblock %}
-    
+
     <form class="container" name="user-link" action="/get-media" method="post">
-        <input type="text" placeholder="'user', 'https://www.instagram.com/instagram/', or 'https://www.instagram.com/p/BbVLoAeBUo-/?taken-by=instagram' " name="target" autofocus>
-        <button type="submit" class="button">Get Media</button>
+        <input type="text" id="inputField" placeholder="'user', 'https://www.instagram.com/instagram/', or 'https://www.instagram.com/p/BbVLoAeBUo-/?taken-by=instagram' " name="target" autofocus>
+        <button type="submit" class="button" onclick(="clearField();">Get Media</button>
     </form>
-    
+
+    <!-- Script to clear the input bar for downloads -->
+    <script type="text/javascript">
+        function clearField() {
+            inputField.value = "'user', 'https://www.instagram.com/instagram/', or 'https://www.instagram.com/p/BbVLoAeBUo-/?taken-by=instagram' ";
+        }
+
+    </script>
+
     {% if not session['logged_in'] %}
     <a class="button" href="{{url_for('login')}}">Login</a> {% else %}
     <br>
@@ -40,7 +47,7 @@
             <p class="footer-links">
                 <a href="{{url_for('index')}}">Home</a> ·
                 <a href="{{url_for('help')}}">Help</a> ·
-                <a href="http://cs480-projects.github.io/teams-fall2017/SSG/index.html">Developers</a> 
+                <a href="http://cs480-projects.github.io/teams-fall2017/SSG/index.html">Developers</a>
             </p>
             <p>SSG &copy; 2017</p>
         </div>
