Broke the input bar, fixing by resetting the value to blank

--- a/Margatsni/templates/index.html
+++ b/Margatsni/templates/index.html
@@ -29,7 +29,7 @@
     <!-- Script to clear the input bar for downloads -->
     <script type="text/javascript">
         function clearField() {
-            document.getElementById("inputField").value = "'user', 'https://www.instagram.com/instagram/', or 'https://www.instagram.com/p/BbVLoAeBUo-/?taken-by=instagram' ";
+            document.getElementById("inputField").value = " ";
         }
 
     </script>
